--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
                     <%= link_to current_user.name, user_path(current_user) %> <br/> <%= link_to "Sign Out", session_path(current_user), method: :delete %>
                 </div>
          <% else %>
-           <%= link_to "Sign In", new_session_path %> or
-           <%= link_to "Sign Up", new_user_path %>
+           <%= link_to "Sign In", new_user_session_path %> or
+           <%= link_to "Sign Up", new_user_registration_path %>
          <% end %>
        </div>
    </ul>
