--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,8 @@
    <h1>Blocmarks</h1>
    <p>Re-inventing the bookmark</p>
    <p>
-     <%= link_to "Sign In", new_session_path %> or
-     <%= link_to "Sign Up", new_user_path, class: 'btn btn-primary' %> today!
+     <%= link_to "Sign In", new_user_session_path %> or
+     <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
    </p>
  </div>
  
