--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,30 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+    <p>
+        <% if user_signed_in? %>
+        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+        <% else %>
+        <li><%= link_to "Sign In", new_user_session_path %>,</li>
+        <li><%= link_to "Sign up now!",  new_user_registration_path%>!</li>
+        <% end %>
+   </p>
 </head>
 <body>
-
+<div>
+    <% if flash[:notice] %>
+       <div class="alert alert-success">
+         <button type="button" class="close" data-dismiss="alert">&times;</button>
+         <%= flash[:notice] %>
+       </div>
+     <% elsif flash[:alert] %>
+       <div class="alert alert-warning">
+         <button type="button" class="close" data-dismiss="alert">&times;</button>
+         <%= flash[:alert] %>
+       </div>
+     <% end %>
 <%= yield %>
+</div>
 
 </body>
 </html>
