--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
   <%= csrf_meta_tags %>
     <p>
         <% if user_signed_in? %>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+            You are: <strong><%= current_user.email %></strong>
+            <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
+            <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
-        <li><%= link_to "Sign In", new_user_session_path %>,</li>
-        <li><%= link_to "Sign up now!",  new_user_registration_path%>!</li>
+            <li><%= link_to "Sign In", new_user_session_path %>,</li>
+            <li><%= link_to "Sign up now!",  new_user_registration_path%>!</li>
         <% end %>
    </p>
 </head>
