--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,3 +19,14 @@
    </div>
  </div>
  
+    <!--<div class="col-md-8">-->
+    <!-- % @topics.each do |topic| %>-->
+    <!--   <div class="media">-->
+    <!--     <div class="media-body">-->
+    <!--       <h4 class="media-heading">-->
+    <!--         %= link_to topic.name, topic %>-->
+    <!--       </h4>-->
+
+    <!--     </div>-->
+    <!--   </div>-->
+    <!-- % end %>-->
