--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,16 +1,18 @@
  <h1><%= @topic.title %></h1>
- 
 
-<!--<div class="row">-->
-<!--    <div class='col-md-8'>-->
-<!--        <p>%= @wiki.body %></p>-->
-<!--    </div>-->
-<!--</div>-->
-   
+<div class="row">
+    <div class='col-md-8'>
+         <% @topic.bookmarks.each do |bookmark| %>
+         <li><%= link_to bookmark.url, topic_bookmark_path(@topic, bookmark) %> </li>
+         <% end %>
+    </div>
+</div>
+ <br>
     <div class="col-md-4">
-      <%= link_to "New Topic", new_topic_path(@topic), class: 'btn btn-success' %>
-      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'This is my favorite Topic, are you sure?' } %>
-      <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+      <%= link_to "New Topic", new_topic_path(@topic), class: 'btn btn-success' %> |
+      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'This is my favorite Topic, are you sure?' } %> |
+      <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %> |
+      <%= link_to "New Bookmark", new_topic_bookmark_path(@topic), class: 'btn btn-success' %> 
     </div>
     
  </div>
