--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Topics</h1>
-
+ <div class="col-md-4">
+  Create a 
+ <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
+ </div>
+<br>
 <div class="row">
  <div class="col-md-8">
   <% @topics.each do |topic| %>
@@ -11,8 +15,5 @@
     </div>
    </div>
   <% end %>
- </div>
- <div class="col-md-4">
- <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
  </div>
 </div>
