--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,10 @@
  <h1><%= @topic.title %></h1>
-
+    <div class="col-md-2">
+        <%= link_to "Edit", edit_topic_path, class: 'btn btn-success' %> or
+        <%= link_to "Delete", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'This is my favorite Topic, are you sure?' } %> 
+         this topic
+    </div>
+<br>
 <div class="row">
     <div class='col-md-8'>
          <% @topic.bookmarks.each do |bookmark| %>
@@ -8,11 +13,10 @@
     </div>
 </div>
  <br>
-    <div class="col-md-4">
-      <%= link_to "New Topic", new_topic_path(@topic), class: 'btn btn-success' %> |
-      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'This is my favorite Topic, are you sure?' } %> |
-      <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %> |
-      <%= link_to "New Bookmark", new_topic_bookmark_path(@topic), class: 'btn btn-success' %> 
+    <div class='col-md-2'>
+        <%= link_to "Add a new bookmark", new_topic_bookmark_path(@topic), class: 'btn btn-success' %>
+        <!--%= link_to "Edit", edit_topic_bookmark_path(@bookmark, @topic), class: 'btn btn-success' %> |-->
+        <!--%= link_to "Delete", (@topic, @bookmark), method: :delete, class: 'btn btn-danger', data: { confirm: 'Noooo, this bookmark? really?' } %>-->
     </div>
     
  </div>
