--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,6 +1,8 @@
 <h1><%= @bookmark.url %></h1>
-
+  
+  <% if @bookmark.user_id == current_user.id %>
     <div>
         <%= link_to "Edit", edit_topic_bookmark_path(@bookmark.topic, @bookmark), class: 'btn btn-success' %> or 
         <%= link_to "Delete", [@bookmark.topic, @bookmark], method: :delete, class: 'btn btn-danger', data: { confirm: 'Noooo, this bookmark? really?' } %> this bookmark?
     </div>
+    <% end %>
