--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -3,6 +3,7 @@
  <div class="row">
 
    <div class="col-md-8">
+     
      <%= form_for @topic do |f| %>
        <div class="form-group">
          <%= f.label :title %>
@@ -12,3 +13,4 @@
        <%= f.submit "Save", class: 'btn btn-success' %>
      <% end %>
    </div>
+ </div>
