--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -10,7 +10,9 @@
    <div class="media">
     <div class="media-body">
      <h4 class="media-heading">
+      <!--% if topic.user == current_user %>-->
       <%= link_to topic.title, topic %>
+      <!--% end %>-->
      </h4>
     </div>
    </div>
