--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,11 +1,13 @@
+ <% if policy(Like.new).create? %>
 <div>
   <% if like = current_user.liked(bookmark) %>
     <%= link_to [bookmark, like], class: 'btn btn-danger', method: :delete do %>
       <i class="glyphicon glyphicon-star-empty"> </i>&nbsp; Unlike
     <% end %>
   <% else %>
-    <%= link_to [bookmark, Like.new], class: 'btn btn-primary', method: :post do %>
+    <%= link_to [topic_bookmark_like_path(@topic, bookmark), Like.new], class: 'btn btn-primary', method: :post do %>
       <i class="glyphicon glyphicon-star"> </i>&nbsp; Like
     <% end %>
   <% end %>
 </div>
+<% end %>
