just need to figure out how to list liked bookmarks

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,8 @@
    <h1>Blocmarks</h1>
    <p>Sharing your bookmarks with the world one</p>
  </div>
- 
+
+<!-- replace w/ bookmarksa and likes -->
  <div class="row">
    <div class="col-md-4">
      <h2>You get bookmark...</h2>
@@ -19,14 +20,3 @@
    </div>
  </div>
  
-    <!--<div class="col-md-8">-->
-    <!-- % @topics.each do |topic| %>-->
-    <!--   <div class="media">-->
-    <!--     <div class="media-body">-->
-    <!--       <h4 class="media-heading">-->
-    <!--         %= link_to topic.name, topic %>-->
-    <!--       </h4>-->
-
-    <!--     </div>-->
-    <!--   </div>-->
-    <!-- % end %>-->
