--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,12 @@
   <%= csrf_meta_tags %>
     <p>
         <% if user_signed_in? %>
-            You are: <strong><%= current_user.email %></strong>
+            You are: <strong><%= current_user.email %>!</strong>
+            <li><%= link_to 'Home', root_path%></li>
+            <li><%= link_to 'My Stuff', user_path(current_user.id) %></li> 
+            <li><%= link_to 'Topics!', topics_path %></li> 
             <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
             <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
-            <li><%= link_to 'Topics!', topics_path %></li> 
-
         <% else %>
             <li><%= link_to "Sign In", new_user_session_path %>,</li>
             <li><%= link_to "Sign up now!",  new_user_registration_path%>!</li>
