--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,18 @@
     <p>
         <% if user_signed_in? %>
             You are: <strong><%= current_user.email %>!</strong>
-            <li><%= link_to 'Home', root_path%></li>
-            <li><%= link_to 'My Stuff', user_path(current_user.id) %></li> 
-            <li><%= link_to 'Topics!', topics_path %></li> 
-            <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
-            <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+            <div class="btn-group">
+               <%= link_to 'Home', root_path, class: 'btn btn-success'%>
+                <%= link_to 'My Stuff', user_path(current_user.id), class: 'btn btn-success' %> 
+                <%= link_to 'Topics!', topics_path, class: 'btn btn-success' %> 
+                <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link', class: 'btn btn-success' %>
+                <%= link_to "Logout", destroy_user_session_path, :method => :delete, class: 'btn btn-danger' %>
+            </div>
         <% else %>
-            <li><%= link_to "Sign In", new_user_session_path %>,</li>
-            <li><%= link_to "Sign up now!",  new_user_registration_path%>!</li>
+            <div class="btn-group">
+            <%= link_to "Sign In", new_user_session_path, class: 'btn btn-success' %>
+            <%= link_to "Sign up now!",  new_user_registration_path, class: 'btn btn-success'%>
+            </div>
         <% end %>
    </p>
 </head>
