--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Topics</h1>
  <div class="col-md-4">
-  Create a 
  <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
  </div>
 <br>
@@ -10,7 +9,7 @@
    <div class="media">
     <div class="media-body">
      <h4 class="media-heading">
-      <%= link_to topic.title, topic %>
+      <li><%= link_to topic.title, topic %></li>
      </h4>
     </div>
    </div>
