--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,9 +1,12 @@
  <h1><%= @topic.title %></h1>
-    <div class="col-md-2">
-        <%= link_to "Edit", edit_topic_path, class: 'btn btn-success' %> or
-        <%= link_to "Delete", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'This is my favorite Topic, are you sure?' } %> 
-         this topic
+    <div class="col-md-4">
+        <div class="btn-group">
+        <%= link_to "Edit", edit_topic_path, class: 'btn btn-success' %>
+        <%= link_to "Delete", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'This is my favorite Topic, are you sure?' } %>
+        <%= link_to "Add Bookmark", new_topic_bookmark_path(@topic), class: 'btn btn-success' %>
+        </div>
     </div>
+<br>
 <br>
 <div class="row">
     <div class='col-md-8'>
@@ -15,11 +18,3 @@
          <% end %>
     </div>
 </div>
- <br>
-    <div class='col-md-2'>
-        <%= link_to "Add a new bookmark", new_topic_bookmark_path(@topic), class: 'btn btn-success' %>
-        <!--%= link_to "Edit", edit_topic_bookmark_path(@bookmark, @topic), class: 'btn btn-success' %> |-->
-        <!--%= link_to "Delete", (@topic, @bookmark), method: :delete, class: 'btn btn-danger', data: { confirm: 'Noooo, this bookmark? really?' } %>-->
-    </div>
-    
- </div>
