--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,25 @@
- <div class="col-md-4">
-   <h2>Your Blocmarks:</h2>
-     <div class="col-md-8">
-       <% @user_bookmarks.each do |bookmark| %>
-           <h4>
-             <%="#{bookmark.topic.title}" %>
-             <br>
-             <li><%= link_to bookmark.url, bookmark.url, :target => '_blank' %> <%= link_to "Delete", [bookmark.topic, bookmark], method: :delete, class: 'btn btn-danger' %></li>
-             <br>
-           </h4>
-       <% end %>
-     </div>
- </div>
+<div class="col-md-6, text-center">
+   <h4><strong>Your Blocmarks:</strong></h4>
+    <% @user_bookmarks.each do |bookmark| %>
+        <p>
+          <u><%="#{bookmark.topic.title}" %></u>
+          <br>
+          <li><%= bookmark.url %> <%= link_to "Remove", [bookmark.topic, bookmark], method: :delete, class: 'btn btn-xs btn-danger ' %></li>
+        </p>
+    <% end %>
+________________________________________________________________________________________________________________________________
+   <br>
+   <br>
+   <h4><strong>Blocmarks you like:</strong></h4>
+     <div class="col-md-6, text-center">
+       <% @liked_bookmarks.each do |like| %>
+         <p>
+           <li><%="#{like.bookmark.url}" %> <%= link_to "Unlike", topic_bookmark_path(bookmark_url, like), method: :get, class: 'btn btn-xs btn-danger' %></li> 
+           <br>
+           <% end %>
+           <br>
+         </p>
+      </div>
+</div>
  
- <!-- <div class="row">-->
- <!--  <h2>What you like from other people:</h2>-->
- <!--    <div class="col-md-8">-->
- <!--      % @liked_bookmarks.each do |bookmark| %>-->
- <!--          <h4 class="media-heading">-->
- <!--            %="#{like.bookmark.url}" %>-->
- <!--            <br>-->
- <!--            <br>-->
- <!--          </h4>-->
- <!--      % end %>-->
- <!--    </div>-->
- <!--</div>-->
+  
