--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,6 @@
  <h1><%= @topic.title %></h1>
-    <div class="col-md-4">
+ <div class="row">
+    <div class="col-md-3">
         <div class="btn-group">
         <%= link_to "Edit", edit_topic_path, class: 'btn btn-success' %>
         <%= link_to "Delete", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'This is my favorite Topic, are you sure?' } %>
@@ -8,13 +9,10 @@
     </div>
 <br>
 <br>
-<div class="row">
-    <div class='col-md-8'>
+    <div class='col-md-9'>
          <% @topic.bookmarks.each do |bookmark| %>
-         <li><%= link_to bookmark.url, topic_bookmark_path(@topic, bookmark) %> </li>
-            <div class="button_placement">
-                <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
-            </div>
-         <% end %>
+            <li> <%= link_to bookmark.url, topic_bookmark_path(@topic, bookmark) %><%= render partial: 'likes/like', locals: { bookmark: bookmark } %> </li>
+             <% end %>
+         </div>
     </div>
-</div>
+
